# movr-datahub-analytics

./: .gitignore  CONTRIBUTING.md  CONTRIBUTORS.md  LICENSE  QUICK_START.md  README.md  pyproject.toml
.github/: CODEOWNERS  SECURITY.md  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md  rfc_proposal.md
.github/workflows/: ci.yml
config/: cohort_definitions.yaml  config.yaml  field_mappings.yaml  transform_abbrevs.yaml  wrangling_rules.yaml
docs/: ARCHITECTURE_PLAN.md  BEST_PRACTICES.md  DATA_WRANGLING_PATTERNS.md  DATA_WRANGLING_RULES.md  DATA_WRANGLING_TRACKER.md  DEVELOPMENT_ENVIRONMENT.md  FEATURES.md  SUMMARY_COMMAND.md  notebook_percent_notes.md  scripts_note.md
notebooks/: 01_getting_started.py  01_getting_started_interactive.py  02_custom_analysis_example.py  03_make_all_disease_cohorts.py  04_quick_start_explore_interactive.py  05_exploratory_interpretor_interactive copy.py  andre_exploration.py
plugins/: README.md  example_transform.py
proposals/: 001-QUICK-REFERENCE.md  001-cohort-builder-architecture.md  BRANCHING_STRATEGY.md  README.md
proposals/rules/: 2025-11-21-consolidated-ambulation-transform.md  2025-11-21-dmd-glucocorticoid-exposure-transform.md
proposals/templates/: feature-proposal-template.md  rule-proposal-template.md
proposals/transforms/: 2025-11-21-consolidated-ambulation-transform.md  2025-11-21-dmd-glucocorticoid-exposure-transform.md
scripts/: exploratory_interpreter.py  make_all_disease_cohorts.py  make_exploratory_cohort.py  quick_start_exploratory_cohorts.py
src/movr/: __init__.py  __version__.py
src/movr/analytics/: __init__.py  base.py  descriptive.py
src/movr/cli/: __init__.py  main.py
src/movr/cli/commands/: convert.py  dictionary.py  setup.py  status.py  summary.py  validate.py
src/movr/cohorts/: __init__.py  filters.py  manager.py  validation.py
src/movr/config/: __init__.py  loader.py  schema.py
src/movr/data/: __init__.py  audit.py  excel_converter.py  parquet_loader.py
src/movr/dictionary/: __init__.py
src/movr/utils/: __init__.py  errors.py  logging.py
src/movr/workflows/: __init__.py
src/movr/wrangling/: __init__.py  pipeline.py  plugins.py  rules.py
tests/: __init__.py  test_exploratory_interpreter.py  test_interactive_03_exploratory.py  test_make_all_disease_cohorts.py
tests/test_analytics/: test_descriptive.py
tests/test_config/: test_settings.py
tests/test_scripts/: test_exploratory_interpreter.py  test_make_exploratory_cohort.py
